--- a/public/main/template/default/exercise/oral_expression.html.twig
+++ b/public/main/template/default/exercise/oral_expression.html.twig
@@ -77,7 +77,7 @@
             type: '{{ type }}',
             tExerciseId: parseInt('{{ t_exercise_id }}') || 0,
             questionId: parseInt('{{ question_id }}') || 0,
-            recordAudioUrl: '{{ url('legacy_main', {name: 'inc/ajax/record_audio_rtc.ajax.php'}) }}',
+            recordAudioUrl: '/main/inc/ajax/record_audio_rtc.ajax.php',
             cidReq: '{{ course_url_params }}'
         });
 
