--- a/public/main/template/default/skills/skill_profile.html.twig
+++ b/public/main/template/default/skills/skill_profile.html.twig
@@ -9,15 +9,11 @@
         {#<a href="{{ _p.web_main }}skills/skill_level.php?action=add_level&id={{ profile.id }}">#}
         {#{{ 'ActionIcon::ADD'|mdi_icon }}#}
         {#</a>#}
-        <a
-            href="{{ url('legacy_main', {'name' : 'skills/skill_profile.php'}) }}?action=edit&id={{ profile.id }}"
-        >
+        <a href="/main/skills/skill_profile.php?action=edit&id={{ profile.id }}">
             {{ 'ActionIcon::EDIT'|mdi_icon }}
         </a>
 
-        <a
-            href="{{ url('legacy_main', {'name' : 'skills/skill_profile.php'}) }}?action=delete&id={{ profile.id }}"
-        >
+        <a href="/main/skills/skill_profile.php?action=delete&id={{ profile.id }}">
             {{ 'ActionIcon::DELETE'|mdi_icon }}
         </a>
     </h4>
@@ -28,9 +24,7 @@
                 {% if loop.first %}
                     {{ 'ActionIcon::UP'|mdi_icon(22, 'ch-tool-icon-disabled') }}
                 {% else %}
-                    <a
-                        href="{{ url('legacy_main', {'name' : 'skills/skill_profile.php'}) }}?action=move_up&level_id={{ level.id }}&id={{ profile.id }}"
-                    >
+                    <a href="/main/skills/skill_profile.php?action=move_up&level_id={{ level.id }}&id={{ profile.id }}">
                         {{ 'ActionIcon::UP'|mdi_icon(22) }}
                     </a>
                 {% endif %}
@@ -38,9 +32,7 @@
                 {% if loop.last %}
                     {{ 'ActionIcon::DOWN'|mdi_icon(22, 'ch-tool-icon-disabled') }}
                 {% else %}
-                    <a
-                        href="{{ url('legacy_main', {'name' : 'skills/skill_profile.php'}) }}?action=move_down&level_id={{ level.id }}&id={{ profile.id }}"
-                    >
+                    <a href="/main/skills/skill_profile.php?action=move_down&level_id={{ level.id }}&id={{ profile.id }}">
                         {{ 'ActionIcon::DOWN'|mdi_icon(22) }}
                     </a>
                 {% endif %}
