--- a/src/CoreBundle/Resources/views/AccessUrl/_breadcrumb_users_to_url.twig
+++ b/src/CoreBundle/Resources/views/AccessUrl/_breadcrumb_users_to_url.twig
@@ -2,19 +2,19 @@
     <nav class="p-breadcrumb p-component mb-4" aria-label="breadcrumb" data-pc-name="breadcrumb" data-pc-section="root">
         <ol class="p-breadcrumb-list flex items-center" data-pc-section="list">
             <li class="p-breadcrumb-item" data-pc-section="item">
-                <a href="{{ url('legacy_main', { 'name' : 'admin/index.php' }) }}" class="p-breadcrumb-item-link" data-pc-section="itemlink">
+                <a href="/main/admin/index.php" class="p-breadcrumb-item-link" data-pc-section="itemlink">
                     {{ 'Administration'|trans }}
                 </a>
             </li>
             <li class="p-breadcrumb-separator" data-pc-section="separator">/</li>
             <li class="p-breadcrumb-item" data-pc-section="item">
-                <a href="{{ url('legacy_main', { 'name' : 'admin/access_urls.php' }) }}" class="p-breadcrumb-item-link" data-pc-section="itemlink">
+                <a href="/main/admin/access_urls.php" class="p-breadcrumb-item-link" data-pc-section="itemlink">
                     {{ 'Multiple access URL'|trans }}
                 </a>
             </li>
             <li class="p-breadcrumb-separator" data-pc-section="separator">/</li>
             <li class="p-breadcrumb-item" data-pc-section="item">
-                <a href="{{ url('legacy_main', { 'name' : 'admin/access_url_edit_users_to_url.php' }) }}" class="p-breadcrumb-item-link" data-pc-section="itemlink">
+                <a href="/main/admin/access_url_edit_users_to_url.php" class="p-breadcrumb-item-link" data-pc-section="itemlink">
                     {{ 'Edit users and URLs'|trans }}
                 </a>
             </li>
