--- a/src/CoreBundle/Resources/views/AccessUrl/import_users.html.twig
+++ b/src/CoreBundle/Resources/views/AccessUrl/import_users.html.twig
@@ -4,7 +4,7 @@
     {% include "@ChamiloCore/AccessUrl/_breadcrumb_users_to_url.twig" %}
 
     <div class="mb-6">
-        <a href="{{ url('legacy_main', { 'name' : 'admin/access_url_edit_users_to_url.php' }) }}"
+        <a href="/main/admin/access_url_edit_users_to_url.php"
            class="inline-flex items-center gap-2 text-sm text-primary hover:underline">
             <i class="mdi mdi-arrow-left"></i>
             {{ 'Back to user assignment page'|trans }}
