--- a/public/main/template/default/skills/skill.html.twig
+++ b/public/main/template/default/skills/skill.html.twig
@@ -2,16 +2,12 @@
 <h3>{{ 'Skills' | trans }}</h3>
 <ul>
     <li>
-        <a
-            href="{{ url('legacy_main', {'name' : 'skills/skill_profile.php'}) }}"
-        >
+        <a href="/main/skills/skill_profile.php">
             {{ 'Add profile' | trans }}
         </a>
     </li>
     <li>
-        <a
-            href="{{ url('legacy_main', {'name' : 'skills/skill_level.php'}) }}"
-        >
+        <a href="/main/skills/skill_level.php">
             {{ 'Add level' | trans }}
         </a>
     </li>
@@ -28,7 +24,7 @@
             ({{ skill.shortCode }})
         {% endif %}
         <a
-            href="{{ url('legacy_main', {'name' : 'skills/skill.php'}) ~ '?action=edit&id='  ~  skill.id}}"
+            href="skills/skill.php?action=edit&id={{ skill.id }}"
         >
             {{ 'ActionIcon::EDIT'|mdi_icon(22) }}
         </a>
