--- a/public/main/template/default/survey/pending.html.twig
+++ b/public/main/template/default/survey/pending.html.twig
@@ -17,7 +17,7 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <div>
-                <a href="{{ url('legacy_main', { 'name' : 'survey/fillsurvey.php', 'course': course_code, 'invitationcode': survey.invitation_code, 'cid': survey.course.id, 'sid': session_id}) |url_encode }}">
+                <a href="/main/survey/fillsurvey.php?'{{ { 'course': course_code, 'invitationcode': survey.invitation_code, 'cid': survey.course.id, 'sid': session_id}|url_encode }}">
                     {{ survey.title }}
                 </a>
             </div>
