--- a/src/CoreBundle/Resources/views/Course/welcome.html.twig
+++ b/src/CoreBundle/Resources/views/Course/welcome.html.twig
@@ -24,7 +24,7 @@
                 <div class="item">
                     {{ 'tool_info.png' | icon(64, 'Add course description'|trans ) }}
                     <div class="caption">
-                        <a href="{{ url('legacy_main', { 'name' : 'course_description/index.php', 'cid': course.id}) }}" class="btn btn-outline-primary">
+                        <a href="/main/course_description/index.php?{{ { 'cid': course.id}|url_encode }}" class="btn btn-outline-primary">
                             <em class="fa fa-info-circle"></em> {{'Add course description'|trans}}
                         </a>
                     </div>
@@ -34,7 +34,7 @@
                 <div class="item">
                     {{ 'tool_folder_document.png' | icon(64, 'Upload a document'|trans ) }}
                     <div class="caption">
-                        <a href="{{ url('legacy_main', { 'name' : 'document/document.php', 'cid': course.id}) }} " class="btn btn-outline-primary">
+                        <a href="/main/document/document.php?{{ { 'cid': course.id}|url_encode }} " class="btn btn-outline-primary">
                             <em class="fa fa-paper-plane"></em> {{'Upload a document'|trans}}
                         </a>
                     </div>
@@ -44,7 +44,7 @@
                 <div class="item">
                     {{ 'tool_forum.png' | icon(64, 'Add forum'|trans ) }}
                     <div class="caption">
-                        <a href="{{ url('legacy_main', { 'name' : 'forum/index.php', 'cid': course.id}) }}" class="btn btn-outline-primary">
+                        <a href="/main/forum/index.php?{{ { 'cid': course.id}|url_encode }}" class="btn btn-outline-primary">
                             <em class="fa fa-users"></em> {{ 'Add forum'|trans }}
                         </a>
                     </div>
@@ -55,7 +55,7 @@
                     <div class="item">
                         {{ 'tool_members.png' | icon(64, 'Subscribe user to course'|trans ) }}
                         <div class="caption">
-                            <a href="{{ url('legacy_main', { 'name' : 'user/subscribe_user.php', 'cid': course.id}) }}" class="btn btn-outline-primary">
+                            <a href="/main/user/subscribe_user.php?{{ { 'cid': course.id}|url_encode }}" class="btn btn-outline-primary">
                                 <em class="fa fa-user-plus"></em> {{ 'Subscribe user to course'|trans }}
                             </a>
                         </div>
@@ -66,7 +66,7 @@
                 <div class="item">
                     {{ 'tool_reference.png' | icon(64, 'Course settings'|trans ) }}
                     <div class="caption">
-                        <a href="{{ url('legacy_main', { 'name' : 'course_info/infocours.php', 'cid': course.id}) }}" class="btn btn-outline-primary">
+                        <a href="/main/course_info/infocours.php?{{ { 'cid': course.id}|url_encode }}" class="btn btn-outline-primary">
                             <em class="fa fa-users"></em> {{ 'Change settings'|trans }}
                         </a>
                     </div>
