--- a/src/CoreBundle/Resources/views/Navbar/user.html.twig
+++ b/src/CoreBundle/Resources/views/Navbar/user.html.twig
@@ -12,9 +12,7 @@
             <div class="text-center">
             <img class="img-circle" src="{{ user | illustration }}" alt="{{ user.completeName }}" />
             <p class="name">
-                <a href="{{ url('legacy_main', { 'name' : 'social/home.php' })}}">
-                    {{ user.completeName }}
-                </a>
+                <a href="/main/social/home.php">{{ user.completeName }}</a>
             </p>
             <p><i class="fa fa-envelope-o" aria-hidden="true"></i> {{ user.email }}</p>
             </div>
@@ -24,10 +22,10 @@
 
             {{ url('index') }}
 
-            <a title="{{ "Inbox"|trans }}" href="{{ url('legacy_main', { 'name' : 'messages/inbox.php' }) }}">
+            <a title="{{ "Inbox"|trans }}" href="/main/messages/inbox.php">
                 <em class="fa fa-envelope" aria-hidden="true"></em> {{ "Inbox"|trans }}
             </a>
-            <a title="{{ "My certificates"|trans }}" href="{{ url('legacy_main', { 'name' : 'gradebook/my_certificates.php' })  }}">
+            <a title="{{ "My certificates"|trans }}" href="/main/gradebook/my_certificates.php">
                 <em class="fa fa-graduation-cap" aria-hidden="true"></em> {{ "My certificates"|trans }}
             </a>
             <a id="logout_button" title="{{ "Logout"|trans }}" href="{{ path('logout') }) }}" >
