Internal: Mail fix: show email logo from theme - refs BT#11946

--- a/src/CoreBundle/Resources/views/Mailer/Default/header.html.twig
+++ b/src/CoreBundle/Resources/views/Mailer/Default/header.html.twig
@@ -1,21 +1,35 @@
 {% autoescape false %}
-    {# Fallbacks: email-logo (SVG/PNG) → header-logo (SVG/PNG) #}
-    {% set src = theme_asset_base64('images/email-logo.svg') %}
-    {% if not src %}{% set src = theme_asset_base64('images/email-logo.png') %}{% endif %}
-    {% if not src %}{% set src = theme_asset_base64('images/header-logo.svg') %}{% endif %}
-    {% if not src %}{% set src = theme_asset_base64('images/header-logo.png') %}{% endif %}
+    {% set src = theme_logo('email', true) %}
+    {% if not src %}
+        {% set candidates = [
+            'images/email-logo.svg',
+            'images/email-logo.png',
+            'images/header-logo.svg',
+            'images/header-logo.png'
+        ] %}
+        {% for c in candidates %}
+            {% if not src %}
+                {% set url = theme_asset(c, true) %}
+                {% if url %}
+                    {% set src = url %}
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+    {% endif %}
     <table border="0" cellpadding="10" cellspacing="0" width="100%">
         <tr>
             <td width="245" valign="top" {{ mail_header_style|default('') }}>
                 {% if src %}
                     <img
-                        alt="Chamilo"
-                        width="130"
-                        height="60"
-                        src="{{ src }}"
+                            alt="{{ platform_name|default('Chamilo') }}"
+                            width="130"
+                            style="display:block;height:40px;"
+                            src="{{ src }}"
                     />
                 {% else %}
-                    <span style="font-weight:600;font-size:16px;line-height:1;">Chamilo</span>
+                    <span style="font-weight:600;font-size:16px;line-height:1;">
+          {{ platform_name|default('Chamilo') }}
+        </span>
                 {% endif %}
             </td>
             <td width="100%">&nbsp;</td>
